[improvement]: a "No records" row if the table is empty. and Adjusted the vertical alignment of the search bar, page heading, and table to ensure they are correctly aligned.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,7 +21,7 @@
 }
 
 .heading-section {
-  padding: 20px 24px;
+  padding: 20px 0;
   margin-bottom: 40px;
 }
 
@@ -32,7 +32,6 @@
 
 .actions-section {
   gap: 30px;
-  padding: 15px;
   margin-bottom: 30px;
   border-radius: 10px;
 }
@@ -194,11 +193,14 @@
 tr {
   border-bottom: 1px solid black;
 }
-.table-heading,
-.employee-data {
+th,td {
   padding: 20px;
   border-spacing: 0;
 }
+.no-data{
+  text-align: center;
+}
+
 
 .table-heading {
   border-top: none;
